--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
         <div class="escola-div-conteudo">
             <h2 class="escola-titulo">Karasuno</h2>
             <p class="escola-texto-um">Esse é o time de vôlei de um anime ficcional, o time do protagonista que faz contraste com o anime.</p>
-            <p class="escola-texto-dois">“As escolas cívico-militares são uma opção adicional no roteiro do ensino público para criar um ambiente com mais segurança, onde os pais vão ter um conforto e a gente possa desenvolver o civismo, cantar o hino nacional e fazer com que a disciplina ajude a ser um vetor da melhoria da qualidade de ensino”</p>
+            <p class="escola-texto-dois">“Haikyuu!! é um dos animes mais populares dos últimos anos, bastante comentado nas redes sociais. A série japonesa traz a história de Shoyo Hinata, um estudante que se torna amante do volêi e, durante o ensino médio, ingressa no colégio Karasuno”</p>
             
         
     </section>
     <section class="estudante">
-        <h2 class="estudante-titulo">Quem são nossos estudantes do 2°C das Ciências da Natureza?</h2>
+        <h2 class="estudante-titulo">Quem são os integrantes pricipais do time?</h2>
         <div class="estudante-todos">
             <div class="estudante-div">
                 <img class="estudante-imagem" src="prof.antonio.jpeg" alt="foto do Antonio">
