--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <h2 class="estudante-titulo">Quem são os integrantes pricipais do time?</h2>
         <div class="estudante-todos">
             <div class="estudante-div">
-                <img class="estudante-imagem" src="prof.antonio.jpeg" alt="foto do Antonio">
+                <img class="estudante-imagem" src="Kazunari Tanaka.jpeg" alt="treinador">
                 <h3 class="estudante-nome">Professor Antonio</h3>
                 <a href="https://github.com/antoniocam84/antoniocam84"><img class="estudante-icone" src="github.png" alt="icone github"></a>
                 <a href=""><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
