--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <img class="cabecalho-alura" src="alura1.png" alt="logo da alura start">
         <img class="cabecalho-imagem" src="logo.png" alt="logo da alura start">
         <ul class="cabecalho-lista">
-            <li class="cabecalho-lista-item">Escola</li>
-            <li class="cabecalho-lista-item">Estudante</li>
+            <li class="cabecalho-lista-item"></li>
+            <li class="cabecalho-lista-item">Haikyuu</li>
         </ul>
     </header>
     <section class="escola">
