--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 </head>
 <body>
     <header class="cabecalho">
-        <img class="cabecalho-alura" src="alura1.png" alt="logo da alura start">
-        <img class="cabecalho-imagem" src="logo.png" alt="logo da alura start">
+        <img class="cabecalho-alura" src="logo2.jpeg" alt="">
+        <img class="cabecalho-imagem" src="logo.png" alt="">
         <ul class="cabecalho-lista">
             <li class="cabecalho-lista-item"></li>
             <li class="cabecalho-lista-item">Haikyuu</li>
