--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
             <a href="https://www.instagram.com/oliveiraxwm?igsh=MXN5bTJrbmwwbXBnNg==&authuser=1"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="antonio.jpeg" alt="foto do Antonio Zampieri">
-            <h3 class="estudante-nome">Antonio Zampieri</h3>
+            <img class="estudante-imagem" src="shoyo.jpeg" alt="foto do Antonio Zampieri">
+            <h3 class="estudante-nome">Hinata shoyo</h3>
             <a href="https://github.com/GabrielaM-L"><img class="estudante-icone" src="github.png" alt="icone github"></a>
             <a href="https://www.instagram.com/gabriela_marcomini/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
