--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
             <a href="https://www.instagram.com/gabriela_marcomini/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="davi1.jpeg" alt="foto do Davi">
-            <h3 class="estudante-nome">Davi Mendes</h3>
+            <img class="estudante-imagem" src="tobio.jpeg" alt="foto do Davi">
+            <h3 class="estudante-nome">Tobio Kageyama</h3>
             <a href="https://github.com/davimendesferraz"><img class="estudante-icone" src="github.png" alt="icone github"></a>
             <a href="https://www.instagram.com/dabepq?igsh=MW1tOWkyeW9jeWpuMw==&authuser=1"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
