--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
             <a href="https://www.instagram.com/pebo_fds/?authuser=1"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="gabriella.jpeg" alt="foto da maria">
-            <h3 class="estudante-nome">Gabriela Lacerda</h3>
+            <img class="estudante-imagem" src="koushi.jpeg" alt="foto da maria">
+            <h3 class="estudante-nome">Koushi Sugawara</h3>
             <a href="https://github.com/MagePSR"><img class="estudante-icone" src="github.png" alt="icone github"></a>
             <a href="https://www.instagram.com/gablacerda?igsh=d2dyajkzZHJmamJo&authuser=1"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
