--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
             <a href="https://www.instagram.com/gablacerda?igsh=d2dyajkzZHJmamJo&authuser=1"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="isabeller.jpeg" alt="foto da olhe">
-            <h3 class="estudante-nome">Isabelle Ribeiro</h3>
+            <img class="estudante-imagem" src="asahi.jpeg" alt="foto da olhe">
+            <h3 class="estudante-nome">Asahi Azumane</h3>
             <a href="https://github.com/isabelleribeiro10/Isabelleribeiro10.git"<img class="estudante-icone" src="github.png" alt="icone github">
             <a href="https://www.instagram.com/isabelle.rlopes?igsh=MjduMGNtb28wOW9o&authuser=1"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
