--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
         </div>
        
         <div class="estudante-div">
-            <img class="estudante-imagem" src="jack.jpeg" alt="foto da rafa">
-            <h3 class="estudante-nome">Jack Almario</h3>
+            <img class="estudante-imagem" src="tanaka.jpeg" alt="foto da rafa">
+            <h3 class="estudante-nome">Ryuunosuke Tanaka</h3>
             <a href="https://www.instagram.com/rafafmo/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
