--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
             <a href="https://www.instagram.com/rafafmo/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="joao.jpeg" alt="foto da thais">
-            <h3 class="estudante-nome">João Victor Guimarães</h3>
+            <img class="estudante-imagem" src="kei.jpeg" alt="foto da thais">
+            <h3 class="estudante-nome">kei Tsukishima</h3>
             <a href="https://www.instagram.com/thaispianucci/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
