--- a/index.html
+++ b/index.html
@@ -39,49 +39,49 @@
         <div class="estudante-div">
             <img class="estudante-imagem" src="noya.jpeg" alt="nishinoya">
             <h3 class="estudante-nome">nishinoya</h3>
-            <a href="https://www.instagram.com/oliveiraxwm?igsh=MXN5bTJrbmwwbXBnNg==&authuser=1"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+            <a href="https://www.instagram.com/oliveiraxwm?igsh=MXN5bTJrbmwwbXBnNg==&authuser=1"><img class="estudante-icone" src="beach-ball.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="shoyo.jpeg" alt="foto do Antonio Zampieri">
             <h3 class="estudante-nome">Hinata shoyo</h3>
-            <a href="https://www.instagram.com/gabriela_marcomini/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+            <a href="https://www.instagram.com/gabriela_marcomini/"><img class="estudante-icone" src="beach-ball.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="tobio.jpeg" alt="foto do Davi">
             <h3 class="estudante-nome">Tobio Kageyama</h3>
-            <a href="https://www.instagram.com/dabepq?igsh=MW1tOWkyeW9jeWpuMw==&authuser=1"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+            <a href="https://www.instagram.com/dabepq?igsh=MW1tOWkyeW9jeWpuMw==&authuser=1"><img class="estudante-icone" src="beach-ball.png" alt="icone instagram"></a>
         </div>
       
         <div class="estudante-div">
             <img class="estudante-imagem" src="daichi.jpeg" alt="foto da joice">
             <h3 class="estudante-nome">Daichi Sawamura</h3>
-            <a href="https://www.instagram.com/pebo_fds/?authuser=1"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+            <a href="https://www.instagram.com/pebo_fds/?authuser=1"><img class="estudante-icone" src="beach-ball.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="koushi.jpeg" alt="foto da maria">
             <h3 class="estudante-nome">Koushi Sugawara</h3>
-            <a href="https://www.instagram.com/gablacerda?igsh=d2dyajkzZHJmamJo&authuser=1"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+            <a href="https://www.instagram.com/gablacerda?igsh=d2dyajkzZHJmamJo&authuser=1"><img class="estudante-icone" src="beach-ball.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="asahi.jpeg" alt="foto da olhe">
             <h3 class="estudante-nome">Asahi Azumane</h3>
-            <a href="https://www.instagram.com/isabelle.rlopes?igsh=MjduMGNtb28wOW9o&authuser=1"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+            <a href="https://www.instagram.com/isabelle.rlopes?igsh=MjduMGNtb28wOW9o&authuser=1"><img class="estudante-icone" src="beach-ball.png" alt="icone instagram"></a>
         </div>
        
         <div class="estudante-div">
             <img class="estudante-imagem" src="tanaka.jpeg" alt="foto da rafa">
             <h3 class="estudante-nome">Ryuunosuke Tanaka</h3>
-            <a href="https://www.instagram.com/rafafmo/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+            <a href="https://www.instagram.com/rafafmo/"><img class="estudante-icone" src="beach-ball.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="kei.jpeg" alt="foto da thais">
             <h3 class="estudante-nome">kei Tsukishima</h3>
-            <a href="https://www.instagram.com/thaispianucci/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+            <a href="https://www.instagram.com/thaispianucci/"><img class="estudante-icone" src="beach-ball.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="kenzo.jpeg" alt="foto da rafa">
             <h3 class="estudante-nome">Gustavo Kenzo</h3>
-            <a href="https://www.instagram.com/guug_kenzo?igsh=OGE4dzRjdXVqc3Vj&authuser=1"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+            <a href="https://www.instagram.com/guug_kenzo?igsh=OGE4dzRjdXVqc3Vj&authuser=1"><img class="estudante-icone" src="beach-ball.png" alt="icone instagram"></a>
         </div>
         </div>
         <span></span>
