--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
             <a href="https://www.instagram.com/thaispianucci/"><img class="estudante-icone" src="beach-ball.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="kenzo.jpeg" alt="foto da rafa">
-            <h3 class="estudante-nome">Gustavo Kenzo</h3>
+            <img class="estudante-imagem" src="tada.jpg" alt="foto da rafa">
+            <h3 class="estudante-nome">Tadashi Yamaguchi</h3>
             <a href="https://www.instagram.com/guug_kenzo?igsh=OGE4dzRjdXVqc3Vj&authuser=1"><img class="estudante-icone" src="beach-ball.png" alt="icone instagram"></a>
         </div>
         </div>
