--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="estudante-div">
                 <img class="estudante-imagem" src="Kazunari Tanaka.jpeg" alt="treinador">
                 <h3 class="estudante-nome">Kazunari Tanaka</h3>
-                <a href="https://www.instagram.com/rafafmo/"><img class="estudante-icone" src="beach-ball.png" alt="icone instagram"></a>
+                <a href="https://www.reddit.com/r/haikyuu/comments/5ew2ez/seiyuu_tanaka_kazunaris_final_line_as_haikyuus/?tl=pt-br&rdt=56555"><img class="estudante-icone" src="beach-ball.png" alt="icone instagram"></a>
             </div>
        
         <div class="estudante-div">
