--- a/index.html
+++ b/index.html
@@ -39,24 +39,24 @@
         <div class="estudante-div">
             <img class="estudante-imagem" src="noya.jpeg" alt="nishinoya">
             <h3 class="estudante-nome">nishinoya</h3>
-            <a href="https://www.instagram.com/oliveiraxwm?igsh=MXN5bTJrbmwwbXBnNg==&authuser=1"><img class="estudante-icone" src="beach-ball.png" alt="icone instagram"></a>
+            <a href="https://haikyuu.fandom.com/pt-br/wiki/Yu_Nishinoya"><img class="estudante-icone" src="beach-ball.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="shoyo.jpeg" alt="foto do Antonio Zampieri">
             <h3 class="estudante-nome">Hinata shoyo</h3>
-            <a href="https://www.instagram.com/gabriela_marcomini/"><img class="estudante-icone" src="beach-ball.png" alt="icone instagram"></a>
+            <a href="https://haikyuu.fandom.com/pt-br/wiki/Shoyo_Hinata"><img class="estudante-icone" src="beach-ball.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="tobio.jpeg" alt="foto do Davi">
             <h3 class="estudante-nome">Tobio Kageyama</h3>
-            <a href="https://www.instagram.com/dabepq?igsh=MW1tOWkyeW9jeWpuMw==&authuser=1"><img class="estudante-icone" src="beach-ball.png" alt="icone instagram"></a>
+            <a href="https://haikyuu.fandom.com/pt-br/wiki/Tobio_Kageyama"><img class="estudante-icone" src="beach-ball.png" alt="icone instagram"></a>
         </div>
       
         <div class="estudante-div">
             <img class="estudante-imagem" src="daichi.jpeg" alt="foto da joice">
             <h3 class="estudante-nome">Daichi Sawamura</h3>
-            <a href="https://www.instagram.com/pebo_fds/?authuser=1"><img class="estudante-icone" src="beach-ball.png" alt="icone instagram"></a>
         </div>
+        
         <div class="estudante-div">
             <img class="estudante-imagem" src="koushi.jpeg" alt="foto da maria">
             <h3 class="estudante-nome">Koushi Sugawara</h3>
