--- a/index.html
+++ b/index.html
@@ -55,8 +55,9 @@
         <div class="estudante-div">
             <img class="estudante-imagem" src="daichi.jpeg" alt="foto da joice">
             <h3 class="estudante-nome">Daichi Sawamura</h3>
+            <a href="https://haikyuu.fandom.com/pt-br/wiki/Daichi_Sawamura"><img class="estudante-icone" src="beach-ball.png" alt="icone instagram"></a>
         </div>
-        
+
         <div class="estudante-div">
             <img class="estudante-imagem" src="koushi.jpeg" alt="foto da maria">
             <h3 class="estudante-nome">Koushi Sugawara</h3>
