--- a/index.html
+++ b/index.html
@@ -61,28 +61,28 @@
         <div class="estudante-div">
             <img class="estudante-imagem" src="koushi.jpeg" alt="foto da maria">
             <h3 class="estudante-nome">Koushi Sugawara</h3>
-            <a href="https://www.instagram.com/gablacerda?igsh=d2dyajkzZHJmamJo&authuser=1"><img class="estudante-icone" src="beach-ball.png" alt="icone instagram"></a>
+            <a href="https://haikyuu.fandom.com/wiki/K%C5%8Dshi_Sugawara"><img class="estudante-icone" src="beach-ball.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="asahi.jpeg" alt="foto da olhe">
             <h3 class="estudante-nome">Asahi Azumane</h3>
-            <a href="https://www.instagram.com/isabelle.rlopes?igsh=MjduMGNtb28wOW9o&authuser=1"><img class="estudante-icone" src="beach-ball.png" alt="icone instagram"></a>
+            <a href="https://voyakiloid.fandom.com/pt-br/wiki/Asashi_Shoko"><img class="estudante-icone" src="beach-ball.png" alt="icone instagram"></a>
         </div>
        
         <div class="estudante-div">
             <img class="estudante-imagem" src="tanaka.jpeg" alt="foto da rafa">
             <h3 class="estudante-nome">Ryuunosuke Tanaka</h3>
-            <a href="https://www.instagram.com/rafafmo/"><img class="estudante-icone" src="beach-ball.png" alt="icone instagram"></a>
+            <a href="https://haikyuu.fandom.com/wiki/Ry%C5%ABnosuke_Tanaka"><img class="estudante-icone" src="beach-ball.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="kei.jpeg" alt="foto da thais">
             <h3 class="estudante-nome">kei Tsukishima</h3>
-            <a href="https://www.instagram.com/thaispianucci/"><img class="estudante-icone" src="beach-ball.png" alt="icone instagram"></a>
+            <a href="https://haikyuu.fandom.com/pt-br/wiki/Kei_Tsukishima"><img class="estudante-icone" src="beach-ball.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="tada.jpg" alt="foto da rafa">
             <h3 class="estudante-nome">Tadashi Yamaguchi</h3>
-            <a href="https://www.instagram.com/guug_kenzo?igsh=OGE4dzRjdXVqc3Vj&authuser=1"><img class="estudante-icone" src="beach-ball.png" alt="icone instagram"></a>
+            <a href="https://haikyuu.fandom.com/pt-br/wiki/Tadashi_Yamaguchi"><img class="estudante-icone" src="beach-ball.png" alt="icone instagram"></a>
         </div>
         </div>
         <span></span>
